apps/production/client-sites/katerin-osorio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: katerin-osorio
  namespace: lulo-demo-landings
  labels:
    app: katerin-osorio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: katerin-osorio
  template:
    metadata:
      labels:
        app: katerin-osorio
        name: katerin-osorio
    spec:
      containers:
      - name: katerin-osorio
        image: "registry.yesidlopez.de/katerin-osorio:v1.0.19" # {"$imagepolicy": "lulo-demo-landings:katerin-osorio"}
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "300m"
      imagePullSecrets:
      - name: registry-secret
