apps/production/client-sites/katerin-osorio/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: katerin-osorio
  name: katerin-osorio
  namespace: lulo-demo-landings
spec:
  selector:
    app: katerin-osorio
  type: ClusterIP
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
