apps/production/client-sites/katerin-osorio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: katerin-osorio
  namespace: lulo-demo-landings
  annotations:
    cert-manager.io/cluster-issuer: luloai-issuer
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/target: homelab.luloai.com
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: katerin-osorio-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Demo Lulo AI"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - katerin-osorio.demo.luloai.com
      secretName: katerin-osorio-tls
  rules:
    - host: katerin-osorio.demo.luloai.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: katerin-osorio
                port:
                  number: 3000
